# DifferenceFormatter

./: .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Difference.cpp  DifferenceFomatter  DifferenceFomatter.cbp  DifferenceFomatter.layout  DifferenceFormatter.cpp  DifferenceFormatterApp.cpp  DifferenceFormatterApp.h  DifferenceParser.h  DifferenceReport.cpp  DifferenceReport.h  DifferenceSet.cpp  FileDifference.cpp  FileDifference.h  Line.h  Makefile  README.txt  UnifiedDifferenceFile.cpp  UnifiedDifferenceFile.h  cmake_install.cmake  id_rsa_github.pub  main.cpp  makodiff3.txt  makodiff4.txt  stream.cpp  stream.h  util.cpp  util.h  utilities.cpp  utilities.h
src/sdks/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDKS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/sdks/ctemplate/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTemplatePythonGeneratedFiles.vcxproj  CTemplatePythonGeneratedFiles.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  config.h  ctemplate.sln  ctemplate.vcxproj  ctemplate.vcxproj.filters
src/sdks/ctemplate/src/windows/: port.cc
src/sdks/gnudiff/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Poco.sln  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
src/sdks/poco-1.5.3/Data/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoData.vcxproj  PocoData.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/Data/ODBC/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoDataODBC.vcxproj  PocoDataODBC.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/Data/SQLite/: INSTALL.vcxproj  (+6 more)
src/sdks/poco-1.5.3/Foundation/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoFoundation.vcxproj  PocoFoundation.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/JSON/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoJSON.vcxproj  PocoJSON.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/MongoDB/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoMongoDB.vcxproj  PocoMongoDB.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/Net/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoNet.vcxproj  PocoNet.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/PDF/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoPDF.vcxproj  PocoPDF.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/Util/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoUtil.vcxproj  PocoUtil.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/XML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoXML.vcxproj  PocoXML.vcxproj.filters  cmake_install.cmake
src/sdks/poco-1.5.3/Zip/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PocoZip.vcxproj  PocoZip.vcxproj.filters  cmake_install.cmake
src/sdks/unittest++/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TestUnitTest++.vcxproj  TestUnitTest++.vcxproj.filters  UnitTest++.sln  UnitTest++.vcxproj  UnitTest++.vcxproj.filters  UnitTestMain.cpp  check.vcxproj  check.vcxproj.filters  cmake_install.cmake
src/sdks/unittest++/UnitTest++/: CheckMacros.h
src/tools/DifferenceFormatter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CodeLine.cpp  CodeLine.h  Difference.cpp  Difference.h  Difference.tpl  DifferenceChunk.cpp  DifferenceChunk.h  DifferenceFormatter.sln  DifferenceFormatter.vcxproj  DifferenceFormatter.vcxproj.filters  DifferenceFormatterApp.cpp  DifferenceFormatterApp.h  DifferenceSet.cpp  DifferenceSet.h  DirectoryDifference.h  FileDifference.cpp  FileDifference.h  Line.cpp  Line.h  UnifiedDifferenceFile.cpp  UnifiedDifferenceFile.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  diff_report.html  diffview.css  json_stream.h  main.cpp  makodiff4.txt  makodiffadd.txt  makodiffeverything.txt  makodiffremote.txt  makodiffremove.txt  makodiffremovemore.txt  test.css  test.html  (+3 more)
(+175 files in other folders)
