cmake_minimum_required(VERSION 3.0.0)
project(SDKS)

get_filename_component(ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../.. ABSOLUTE)

set(CMAKE_INSTALL_PREFIX "${ROOT}/build/sdks/\${BUILD_TYPE}/")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

set(CMAKE_DEBUG_POSTFIX "")


add_subdirectory(poco-1.5.3)
set(CMAKE_DEBUG_POSTFIX "")
