# CMake entry point
cmake_minimum_required (VERSION 3.0.0)
project (DifferenceFormatter)

GET_FILENAME_COMPONENT(ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../.. ABSOLUTE)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${ROOT}/cmake/modules/")
INCLUDE(WatersControlCommon)

FILE(GLOB ALL_SOURCES *.cpp)
FILE(GLOB ALL_HEADERS *.h)

ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_SOURCES} ${ALL_HEADERS})
COPY_EXECUTABLE(${PROJECT_NAME} ${ROOT}/bin)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${POCO_FOUNDATION_LIB} ${POCO_UTIL_LIB} ${POCO_NET_LIB})
